fix: change color of Copyright in dark mode

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -62,7 +62,6 @@
   display: flex;
   width: 100%;
   height: 60px;
-  background-color: #e7e4f8;
   justify-content: space-between;
   div {
     display: flex;
